<resources>
    <string name="app_name">Big 5 Safari Slot Machine</string>
    <string name="new_game_btn">new game</string>
    <string name="game_name">BIG 5 SAFARI SLOTS</string>
    <string name="add_money_text">Add money to play</string>
    <string name="nudge">NUDGE</string>
    <string name="hold">HOLD</string>
    <string name="firstSymbol">first fruit machine symbol</string>
    <string name="secondSymbol">second fruit machine symbol</string>
    <string name="white_background">white background</string>
    <string name="symbolThree">third symbol image</string>
    <string name="slot_machine">slot machine</string>
    <string name="spin_button">spin button</string>
    <string name="poundSign">£</string>
    <string name="collect_button">collect button</string>
    <string name="you_collected">You collected:</string>
    <string name="play_again">Play Again</string>
    <string name="game_over">game over</string>
    <string name="outOfMoney">Sorry  Out of Money</string>
    <string name="add_more_money">Add More Money</string>
    <string name="quit">Quit</string>
    <string name="winner">winner</string>
    <string name="togglebutton">ToggleButton</string>
    <string name="add_money">add money</string>
    <string name="top_symbol1">top symbol wheel 1</string>
    <string name="bottom_symbol_wheel_1">bottom symbol wheel 1</string>
    <string name="top_symbol_wheel_2">top symbol wheel 2</string>
    <string name="bottom_symbol_wheel_2">bottom symbol wheel 2</string>
    <string name="top_symbol_wheel_3">top symbol wheel 3</string>
    <string name="bottom_symbol_wheel_3">bottom symbol wheel 3</string>
    <string name="animation_image_view_wheel_1">animation image view wheel 1</string>
    <string name="animation_image_view_wheel_2">animation image view wheel 2</string>
    <string name="animation_image_view_wheel_3">animation image view wheel 3</string>
    <string name="fivepounds">£5</string>
    <string name="tenpounds">£10</string>
    <string name="twentypounds">£20</string>
    <string name="fiftypounds">£50</string>
    <string name="find_result">find result</string>
    <string name="mini_game">Mini Game</string>
    <string name="minigame_rules">Pick a tree!\nBONUS 10 SPINS if you catch the poacher!</string>
    <string name="word_continue">Continue</string>
    <string name="tree">tree</string>

</resources>
