<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bgportrait"
    tools:context="com.example.hayleyprior.androidslotmachine.MoneyActivity">

    <TextView
        android:id="@+id/addMoneyText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/add_money_text"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/fiveButton"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="32dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/fivepounds"
        android:onClick="onFiveButtonClicked"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addMoneyText"
        app:srcCompat="@drawable/fivepounds" />

    <ImageButton
        android:id="@+id/tenButton"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/tenpounds"
        android:onClick="onTenButtonClicked"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.567"
        app:layout_constraintStart_toEndOf="@+id/fiveButton"
        app:layout_constraintTop_toBottomOf="@+id/addMoneyText"
        app:srcCompat="@drawable/tenpounds" />

    <ImageButton
        android:id="@+id/twentyButton"
        android:layout_width="171dp"
        android:layout_height="100dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/twentypounds"
        android:onClick="onTwentyButtonClicked"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fiveButton"
        app:layout_constraintVertical_bias="0.176"
        app:srcCompat="@drawable/twentypounds" />

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="171dp"
        android:layout_height="100dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/fiftypounds"
        android:onClick="onFiftyButtonClicked"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toEndOf="@+id/twentyButton"
        app:layout_constraintTop_toBottomOf="@+id/tenButton"
        app:layout_constraintVertical_bias="0.176"
        app:srcCompat="@drawable/fiftypounds" />
</androidx.constraintlayout.widget.ConstraintLayout>
