<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/minigameBG"
    tools:context="com.example.hayleyprior.androidslotmachine.MiniGameActivity">

    <ImageView
        android:id="@+id/result1"
        android:layout_width="75dp"
        android:layout_height="79dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="32dp"
        android:contentDescription="@string/find_result"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/miniGameRules"
        app:srcCompat="@drawable/springbok" />

    <ImageView
        android:id="@+id/result3"
        android:layout_width="75dp"
        android:layout_height="79dp"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/find_result"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/springbok" />

    <ImageView
        android:id="@+id/result2"
        android:layout_width="75dp"
        android:layout_height="79dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/find_result"
        app:layout_constraintBottom_toTopOf="@+id/result3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result1"
        app:layout_constraintVertical_bias="0.509"
        app:srcCompat="@drawable/springbok" />

    <TextView
        android:id="@+id/bonusGame"
        android:layout_width="173dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/mini_game"
        android:textAlignment="center"
        android:textColor="@android:color/background_light"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/miniGameRules"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/minigame_rules"
        android:textColor="@android:color/background_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/bonusGame" />

    <ImageButton
        android:id="@+id/tree1"
        android:layout_width="108dp"
        android:layout_height="104dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="16dp"
        android:background="@color/minigameBG"
        android:contentDescription="@string/tree"
        android:onClick="onTree1Clicked"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/miniGameRules"
        app:srcCompat="@drawable/tree" />

    <ImageButton
        android:id="@+id/tree3"
        android:layout_width="108dp"
        android:layout_height="104dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="@color/minigameBG"
        android:contentDescription="@string/tree"
        android:onClick="onTree3Clicked"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/tree" />

    <ImageButton
        android:id="@+id/tree2"
        android:layout_width="108dp"
        android:layout_height="104dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/minigameBG"
        android:contentDescription="@string/tree"
        android:onClick="onTree2Clicked"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/tree3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tree1"
        app:srcCompat="@drawable/tree" />

</android.support.constraint.ConstraintLayout>
